# flask-SQL

./: LICENSE.txt  README.md  db.py  main.py  pyproject.toml  report_racers.py  requirements.txt  setup.py
templates/: index.html  info_in_drivers.html  name_page.html
tests/: conftest_task_7.py
