[project]
name = "web application racing results analysis"
version = "0.0.1"
authors = [
  { name="Dmitro Bobrow", email="dmitr.bobrow2012@gmail.com" },
]
description = """The website provides three pages:
- at http://localhost:5000/report shows general statistics
- http://localhost:5000/report/drivers/ shows a list of driver names and codes. The code is a link to driver information.
- http://localhost:5000/report/drivers/?driver_id=SVF shows driver information.
In addition, each route can receive an order parameter
http://localhost:5000/report/drivers/?order=desc"""
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.poetry.dependencies]
python = '^3.10'
Flask = '3.0.2'
Flask-Caching = '2.1.0'
Flask-Testing = '0.8.1'
Jinja2 = '3.1.3'
MarkupSafe = '2.1.5'
Werkzeug = '3.0.1'
argparse = '1.4.0'
autopep8 = '2.0.4'
beautifulsoup4 = '4.12.3'
blinker = '1.7.0'
build = '1.0.3'
cachelib = '0.9.0'
click = '8.1.7'
itsdangerous = '2.1.2'
packaging = '23.2'
pip = '24.0'
pycodestyle = '2.11.1'
pyproject_hooks = '1.0.0'
setuptools = '69.1.0'
soupsieve = '2.5'

[project.urls]
Homepage = "https://git.foxminded.ua/foxstudent104883/task_7_flask.git"
Issues = "https://git.foxminded.ua/foxstudent104883/task_7_flask.git/issues"